fix: fix tooltip content overflow

--- a/projects/kit/src/components/tooltip/components/tooltip-content/tooltip-content.component.scss
+++ b/projects/kit/src/components/tooltip/components/tooltip-content/tooltip-content.component.scss
@@ -40,6 +40,7 @@ $tooltip_max-text-lines-count: 13;
     overflow: hidden;
     display: -webkit-box;
     white-space: pre-line;
+    word-wrap: break-word;
     -webkit-line-clamp: $tooltip_max-text-lines-count;
     -webkit-box-orient: vertical;
   }
